--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,10 +1,11 @@
 $board-color: #F7E0B0;
 
 .game-show-container {
-  margin: 10%;
 }
 
 .game-board {
+  margin: 0 auto;
+  margin-top: 20%;
   width: 640px;
   height: 640px;
 }
