--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,11 +1,30 @@
+// import constants from master
+@import 'master';
+
+// colors
 $board-color: #F7E0B0;
 
 .game-show-container {
 }
 
+.game-info-tile {
+  // position
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  height: 5%;
+  width: 50%;
+
+  // color
+  background-color: $secondary-background;
+
+  // shape
+  border-radius: 10px;
+}
+
 .game-board {
   margin: 0 auto;
-  margin-top: 20%;
   width: 640px;
   height: 640px;
 }
