style user challenge tile

--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -113,7 +113,11 @@ div.challenges-container {
 
   .loader {
     margin-left: 10%;
-    margin-top: 5%;
+    margin-top: 2%;
+  }
+
+  h1 {
+    margin-left: 10%;
   }
 
   .visitor-button {
